[gd_scene load_steps=5 format=3 uid="uid://b0id2bwdgqr15"]

[ext_resource type="Script" path="res://scripts/bullet_base.gd" id="1_y4lll"]
[ext_resource type="Script" path="res://scripts/damage_collision_3d.gd" id="2_8l5yb"]

[sub_resource type="SphereShape3D" id="SphereShape3D_sij8p"]
radius = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_2ao4y"]
radius = 0.3

[node name="BulletBase" type="Node3D" groups=["bullets"]]
script = ExtResource("1_y4lll")

[node name="PlayerHitbox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 9
script = ExtResource("2_8l5yb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerHitbox"]
shape = SubResource("SphereShape3D_sij8p")

[node name="EnemyHitbox" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 3
monitoring = false
monitorable = false
script = ExtResource("2_8l5yb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyHitbox"]
shape = SubResource("SphereShape3D_2ao4y")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="body_entered" from="PlayerHitbox" to="." method="queue_free" unbinds=1]
[connection signal="body_entered" from="EnemyHitbox" to="." method="queue_free" unbinds=1]
[connection signal="timeout" from="Timer" to="." method="queue_free"]
